# rocket-yew-starter-pack

./: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml
.github/workflows/: client.yml  server.yml
client/: Cargo.toml  index.html
client/src/: main.rs
server/: Cargo.toml
server/src/: cors.rs  database.rs  lib.rs  main.rs  models.rs  routes.rs
server/tests/: routes.rs
ui/: Cargo.toml  LICENSE-MIT  index.css  index.html
ui/src/: main.rs
