[package]
name = "client"
version = "0.2.6"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
repository = "https://github.com/wiseaidev/rocket-yew-starter-pack"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version="0.21", features=["csr"] }
