[package]
name = "server"
version = "0.2.2"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>", "Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sled = "0.34.7"
rocket_cors = "0.6.0-alpha2"
tempdir = "0.3.7"
