[package]
name = "server"
version = "0.2.8"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>", "Mahmoud Harmouch <oss@wiseai.dev>"]
description = "Template server using the Rocket web framework."
repository = "https://github.com/wiseaidev/rocket-yew-starter-pack"
license = "MIT"
keywords = ["rocket", "shuttle"]
categories = ["template"]
edition = "2021"
publish = false

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sled = "0.34.7"
rocket_cors = "0.6.0-alpha2"
tempdir = "0.3.7"
shuttle-runtime = { version = "0.35.2", default-features = false }
shuttle-rocket = "0.34.0"
