[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>", "Mahmoud Harmouch <oss@wiseai.dev>"]
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.10.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
# TODO: report an incompatibility with the newer version of yew 
# stdweb = "0.4.20"
strum = "0.25.0"
strum_macros = "0.25.3"
wasm-bindgen-futures = "0.4.37"
yew = { version="0.21", features=["csr"] }
