[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
gloo = "0.10.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version="0.21", features=["csr"] }
